// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SuccessComponent /> listStocksScreen empty data 1`] = `
<View
  style={
    {
      "backArrow": {
        "color": "purple",
        "fontSize": 30,
        "fontWeight": "900",
        "paddingVertical": 10,
      },
      "btn": {
        "alignItems": "center",
        "borderRadius": 10,
        "margin": 10,
        "padding": 10,
        "width": "40%",
      },
      "button": {
        "backgroundColor": "purple",
        "borderRadius": 25,
        "color": "black",
        "fontSize": 20,
        "fontWeight": "bold",
        "marginTop": "4%",
        "paddingHorizontal": "12%",
        "paddingVertical": "2%",
        "textAlign": "center",
        "width": "75%",
      },
      "buttonWide": {
        "backgroundColor": "purple",
        "borderRadius": 10,
        "marginVertical": 10,
        "padding": 20,
      },
      "container": {
        "backgroundColor": "white",
        "flex": 1,
      },
      "input": {
        "borderColor": "gray",
        "borderRadius": 5,
        "borderWidth": 0.5,
        "height": 40,
        "marginBottom": 5,
        "marginTop": 5,
        "padding": 10,
        "width": "100%",
      },
      "largeTextBold": {
        "color": "black",
        "fontSize": 40,
        "fontWeight": "800",
      },
      "list": {
        "backgroundColor": "white",
        "borderColor": "lightgrey",
        "borderRadius": 4,
        "borderWidth": 1,
        "width": "80%",
      },
      "paddingBottom": 8,
      "paddingTop": 8,
      "smallButton": {
        "backgroundColor": "purple",
        "borderRadius": 5,
        "marginTop": 10,
        "padding": 10,
        "paddingHorizontal": 30,
      },
      "text": {
        "color": "black",
      },
      "textBold": {
        "color": "black",
        "fontWeight": "700",
      },
      "title": {
        "alignSelf": "center",
        "color": "black",
        "fontSize": 50,
        "fontWeight": "900",
        "paddingVertical": 10,
      },
    }
  }
>
  <View>
    <RCTScrollView
      ItemSeparatorComponent={[Function]}
      ListEmptyComponent={
        <Text
          style={
            {
              "color": "black",
            }
          }
        >
          
You have no stock accounts

        </Text>
      }
      collapsable={false}
      data={null}
      getItem={[Function]}
      getItemCount={[Function]}
      handlerTag={3}
      handlerType="NativeViewGestureHandler"
      keyExtractor={[Function]}
      onContentSizeChange={[Function]}
      onGestureHandlerEvent={[Function]}
      onGestureHandlerStateChange={[Function]}
      onLayout={[Function]}
      onMomentumScrollBegin={[Function]}
      onMomentumScrollEnd={[Function]}
      onScroll={[Function]}
      onScrollBeginDrag={[Function]}
      onScrollEndDrag={[Function]}
      removeClippedSubviews={false}
      renderItem={[Function]}
      renderScrollComponent={[Function]}
      scrollEventThrottle={50}
      stickyHeaderIndices={[]}
      style={
        {
          "paddingHorizontal": 8,
        }
      }
      viewabilityConfigCallbackPairs={[]}
      waitFor={
        [
          {
            "current": null,
          },
          {
            "current": null,
          },
        ]
      }
    >
      <View>
        <Text
          onLayout={[Function]}
          style={
            {
              "color": "black",
            }
          }
        >
          
You have no stock accounts

        </Text>
      </View>
    </RCTScrollView>
  </View>
</View>
`;

exports[`<SuccessComponent /> listStocksScreen snapshot test 1`] = `
<View
  style={
    {
      "backArrow": {
        "color": "purple",
        "fontSize": 30,
        "fontWeight": "900",
        "paddingVertical": 10,
      },
      "btn": {
        "alignItems": "center",
        "borderRadius": 10,
        "margin": 10,
        "padding": 10,
        "width": "40%",
      },
      "button": {
        "backgroundColor": "purple",
        "borderRadius": 25,
        "color": "black",
        "fontSize": 20,
        "fontWeight": "bold",
        "marginTop": "4%",
        "paddingHorizontal": "12%",
        "paddingVertical": "2%",
        "textAlign": "center",
        "width": "75%",
      },
      "buttonWide": {
        "backgroundColor": "purple",
        "borderRadius": 10,
        "marginVertical": 10,
        "padding": 20,
      },
      "container": {
        "backgroundColor": "white",
        "flex": 1,
      },
      "input": {
        "borderColor": "gray",
        "borderRadius": 5,
        "borderWidth": 0.5,
        "height": 40,
        "marginBottom": 5,
        "marginTop": 5,
        "padding": 10,
        "width": "100%",
      },
      "largeTextBold": {
        "color": "black",
        "fontSize": 40,
        "fontWeight": "800",
      },
      "list": {
        "backgroundColor": "white",
        "borderColor": "lightgrey",
        "borderRadius": 4,
        "borderWidth": 1,
        "width": "80%",
      },
      "paddingBottom": 8,
      "paddingTop": 8,
      "smallButton": {
        "backgroundColor": "purple",
        "borderRadius": 5,
        "marginTop": 10,
        "padding": 10,
        "paddingHorizontal": 30,
      },
      "text": {
        "color": "black",
      },
      "textBold": {
        "color": "black",
        "fontWeight": "700",
      },
      "title": {
        "alignSelf": "center",
        "color": "black",
        "fontSize": 50,
        "fontWeight": "900",
        "paddingVertical": 10,
      },
    }
  }
>
  <View>
    <RCTScrollView
      ItemSeparatorComponent={[Function]}
      ListEmptyComponent={
        <Text
          style={
            {
              "color": "black",
            }
          }
        >
          
You have no stock accounts

        </Text>
      }
      collapsable={false}
      data={
        [
          {
            "access_token": "access-sandbox-9cf73c44-d4f5-4a9c-84ce-6203d35aa40d",
            "account_id": "ALxMKPjkkdtZVpLBdXx8ia9prXRBmwh67wXWd",
            "balance": "266.23",
            "balance_currency": "GBP",
            "institution_id": "ins_115616",
            "institution_logo": "iVBORw0KGgoAAAANSUhEUgAAAJgAAACYCAMAAAAvHNATAAAAOVBMVEVHcEyZHCCYGx////+ZGx+ZGx+ZHCCcICKZGx+cKCyTFRjdtLWpSEv58PDnysu4aGrx3t7SnZ7FhIaoTrn+AAAACnRSTlMAR///tZt1INj4D9SNwAAABVVJREFUeNrNnNl2ozAMhsGDsS22wPs/7JCkbYIDshZD7Ks5Z6D90aet3qpKO1zd2qZpvA/GBO/Xf9q2dtU3h1sVeXMw/KrPfUfUoaY3dReLqymiXuLqq2zFUPWj7Xy7CVRdoc1ZIx/BuhJlPcYp0vSyTpGWR1Z+aW0w2UZo86Utb7IOXxdGMS/POpgTRlAbrTUnDZ2nucacNhpXGkY9ztacPIQ4rTl9WImuxlwwmkJ18ZU5by4a3pWpi6nsQl2rsuL8i+1nF+siK7Pm8mGLyPfCGlCbr4xk3XThO8KCK83xiQHQmq+NtkAHS7rZtxws6WZRBoPESP4q5ouWCnLp0DEllME87o8uMGFGpRum8R82xpTB+nnYfbFjlvOPiASzDIiwoU+ZDPrb3osLsCJzz/NhwpQtSS+DsGP0IQDL/+3uNy8alusP2LFZx6vm7oBGp2B5/wGfX4YGjaPWIugHDcuVzkAnuVeZ3HHQ61ia2OQd/jWO2B0CZjISy5lD8sPLHBLznYpl7GS3kHjHEdtpgEnHcmaRjEzmUC+5aVjGBp+SbzhqG4a5/5xmeWPE5Ef693iSVLCMY6dLf0lDI3lPRUgxT9bLhUvynWXLzt50liMvJrcsPQ8Hg6WA5Fv3k+70xSwlJF8No+UmSQbLjk/ylco8N7S2vys3yT+WjpC+OxnLuGrQSP7GJeGPXKwsoSxFJH/jkjLtFG4iltFrRJK/Tkaa1+wk9VJK8ulkjvKkjGVUZckkn05GmkcBEcvopZms6+FktJlNpMUYDgiBmOTTyWgzYliLcWQJOclHh0Gc00dajMPfOEpJPryf+CjWLu4zitM+g6QxxKBMlKV9W0QVlkPyHpbUSUQwbJZykvcGgzzrirUYe5RUJNd8QV4H4bJUkVzzBXn+HJCytPNb48d5JNd8QZ/Yx8rSJycdSZYwrMX4tEf0GUySqzDOmimHJahIrhmWIYzFMjLvxBbGWHMABsvoI0YmSRMqztNIWYpZRo9ySa41iSWsp7KMjdvzhbGWj5AWI+rne/rfeAcoWTsZkLK0Zakm6ZnCkLK0ZTkqSXruki6NZfQBfJK8zE9nGT3GJ8kXRmQ5cmfdP4Xxtn9gLcaLZUzS8IflLs8jZenFUk9ybRS56/NIWfpjuS3gEpJra+24r6RZRmlfQvI+R2CysRzC7iMSkoa/iQ3SLDOQ9IJNM0iL8cNyK32UkGwE28WQFuNpnIjkAqJsIdjOg7QYD5Zbk4pIPqah2GGJlKXnOrye5HN22LNZDhjLCLWIpBfuSURZbg0qI2lFe8YgwXLUk2yrSuRkKMvtf4pI/i4MsvcJIwslSw6SXrrxFSlL3baWykha8QbA47I0TBlI1uI938csh1s+koLkj81i5IpJWVwiLUa2mJSxnCm6tCQlLPsrSApYouv3OpLb7YD8VLacRdJWlcpkBPdXdDwak83nkLTUrYCSyQINSac+KZL0MhFJW1VakyW9bMliMMHZh0RdEpG0OTbzg0H9fwRtDpOnfxTmBLqkrznxpt0ji1VJ3YkRZPd6Z/jC6oyHyw6VCWLS5jzMcmQzAUnszJTg+M+BMkF2rTMfmIJ+zEKyzX7EbO9oyY1NsjnjUB70800Zk8lDeaJTZgAQpm7QZNf6tIOfYN7Mxo7J9syjsm9m67JlsDxnLFek/TLyY/KKY88AZuqYMUk/9q87WA+GF9mMA+zlHvkv9pKEcq+VKPgijnKvLin3spdyr8cp90Khcq9gKvjSqnKv+Sr3YrSCr5Ir+PK9bNKaMm9SLPTuSXvqbZ1lXiJa8LWrJV9UW/LVvi9x5V2G/CbvnOuj/wNfYsKPslREjwAAAABJRU5ErkJggg==",
            "institution_name": "Vanguard",
            "name": "Plaid IRA",
          },
        ]
      }
      getItem={[Function]}
      getItemCount={[Function]}
      handlerTag={1}
      handlerType="NativeViewGestureHandler"
      keyExtractor={[Function]}
      onContentSizeChange={[Function]}
      onGestureHandlerEvent={[Function]}
      onGestureHandlerStateChange={[Function]}
      onLayout={[Function]}
      onMomentumScrollBegin={[Function]}
      onMomentumScrollEnd={[Function]}
      onScroll={[Function]}
      onScrollBeginDrag={[Function]}
      onScrollEndDrag={[Function]}
      removeClippedSubviews={false}
      renderItem={[Function]}
      renderScrollComponent={[Function]}
      scrollEventThrottle={50}
      stickyHeaderIndices={[]}
      style={
        {
          "paddingHorizontal": 8,
        }
      }
      viewabilityConfigCallbackPairs={[]}
      waitFor={
        [
          {
            "current": null,
          },
          {
            "current": null,
          },
        ]
      }
    >
      <View>
        <View
          onFocusCapture={[Function]}
          onLayout={[Function]}
          style={null}
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "backgroundColor": "white",
                "borderRadius": 10,
                "opacity": 1,
                "padding": 20,
                "text": "black",
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "flex-start",
                  "flexDirection": "row",
                }
              }
            >
              <Image
                source={
                  {
                    "uri": "data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAJgAAACYCAMAAAAvHNATAAAAOVBMVEVHcEyZHCCYGx////+ZGx+ZGx+ZHCCcICKZGx+cKCyTFRjdtLWpSEv58PDnysu4aGrx3t7SnZ7FhIaoTrn+AAAACnRSTlMAR///tZt1INj4D9SNwAAABVVJREFUeNrNnNl2ozAMhsGDsS22wPs/7JCkbYIDshZD7Ks5Z6D90aet3qpKO1zd2qZpvA/GBO/Xf9q2dtU3h1sVeXMw/KrPfUfUoaY3dReLqymiXuLqq2zFUPWj7Xy7CVRdoc1ZIx/BuhJlPcYp0vSyTpGWR1Z+aW0w2UZo86Utb7IOXxdGMS/POpgTRlAbrTUnDZ2nucacNhpXGkY9ztacPIQ4rTl9WImuxlwwmkJ18ZU5by4a3pWpi6nsQl2rsuL8i+1nF+siK7Pm8mGLyPfCGlCbr4xk3XThO8KCK83xiQHQmq+NtkAHS7rZtxws6WZRBoPESP4q5ouWCnLp0DEllME87o8uMGFGpRum8R82xpTB+nnYfbFjlvOPiASzDIiwoU+ZDPrb3osLsCJzz/NhwpQtSS+DsGP0IQDL/+3uNy8alusP2LFZx6vm7oBGp2B5/wGfX4YGjaPWIugHDcuVzkAnuVeZ3HHQ61ia2OQd/jWO2B0CZjISy5lD8sPLHBLznYpl7GS3kHjHEdtpgEnHcmaRjEzmUC+5aVjGBp+SbzhqG4a5/5xmeWPE5Ef693iSVLCMY6dLf0lDI3lPRUgxT9bLhUvynWXLzt50liMvJrcsPQ8Hg6WA5Fv3k+70xSwlJF8No+UmSQbLjk/ylco8N7S2vys3yT+WjpC+OxnLuGrQSP7GJeGPXKwsoSxFJH/jkjLtFG4iltFrRJK/Tkaa1+wk9VJK8ulkjvKkjGVUZckkn05GmkcBEcvopZms6+FktJlNpMUYDgiBmOTTyWgzYliLcWQJOclHh0Gc00dajMPfOEpJPryf+CjWLu4zitM+g6QxxKBMlKV9W0QVlkPyHpbUSUQwbJZykvcGgzzrirUYe5RUJNd8QV4H4bJUkVzzBXn+HJCytPNb48d5JNd8QZ/Yx8rSJycdSZYwrMX4tEf0GUySqzDOmimHJahIrhmWIYzFMjLvxBbGWHMABsvoI0YmSRMqztNIWYpZRo9ySa41iSWsp7KMjdvzhbGWj5AWI+rne/rfeAcoWTsZkLK0Zakm6ZnCkLK0ZTkqSXruki6NZfQBfJK8zE9nGT3GJ8kXRmQ5cmfdP4Xxtn9gLcaLZUzS8IflLs8jZenFUk9ybRS56/NIWfpjuS3gEpJra+24r6RZRmlfQvI+R2CysRzC7iMSkoa/iQ3SLDOQ9IJNM0iL8cNyK32UkGwE28WQFuNpnIjkAqJsIdjOg7QYD5Zbk4pIPqah2GGJlKXnOrye5HN22LNZDhjLCLWIpBfuSURZbg0qI2lFe8YgwXLUk2yrSuRkKMvtf4pI/i4MsvcJIwslSw6SXrrxFSlL3baWykha8QbA47I0TBlI1uI938csh1s+koLkj81i5IpJWVwiLUa2mJSxnCm6tCQlLPsrSApYouv3OpLb7YD8VLacRdJWlcpkBPdXdDwak83nkLTUrYCSyQINSac+KZL0MhFJW1VakyW9bMliMMHZh0RdEpG0OTbzg0H9fwRtDpOnfxTmBLqkrznxpt0ji1VJ3YkRZPd6Z/jC6oyHyw6VCWLS5jzMcmQzAUnszJTg+M+BMkF2rTMfmIJ+zEKyzX7EbO9oyY1NsjnjUB70800Zk8lDeaJTZgAQpm7QZNf6tIOfYN7Mxo7J9syjsm9m67JlsDxnLFek/TLyY/KKY88AZuqYMUk/9q87WA+GF9mMA+zlHvkv9pKEcq+VKPgijnKvLin3spdyr8cp90Khcq9gKvjSqnKv+Sr3YrSCr5Ir+PK9bNKaMm9SLPTuSXvqbZ1lXiJa8LWrJV9UW/LVvi9x5V2G/CbvnOuj/wNfYsKPslREjwAAAABJRU5ErkJggg==",
                  }
                }
                style={
                  {
                    "height": 40,
                    "width": 40,
                  }
                }
              />
              <View
                style={
                  {
                    "flex": 1,
                    "flexDirection": "column",
                  }
                }
              >
                <Text
                  style={
                    {
                      "color": "black",
                      "fontFamily": "sans-serif",
                      "fontSize": 16,
                      "fontWeight": "bold",
                    }
                  }
                >
                    
                  Plaid IRA
                </Text>
                <Text
                  style={
                    [
                      {
                        "color": "black",
                        "fontFamily": "sans-serif",
                        "fontSize": 15,
                      },
                      {
                        "fontSize": 11,
                      },
                    ]
                  }
                >
                     
                  Vanguard
                   • 
                  GBP
                </Text>
              </View>
              <View
                style={
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                  }
                }
              >
                <Text
                  style={
                    [
                      {
                        "color": "black",
                        "fontFamily": "sans-serif",
                        "fontSize": 15,
                      },
                      {
                        "fontSize": 14,
                        "fontWeight": "bold",
                        "height": 19,
                      },
                    ]
                  }
                >
                  £
                  266
                </Text>
                <View
                  style={
                    {
                      "height": 16,
                    }
                  }
                >
                  <Text
                    style={
                      [
                        {
                          "color": "black",
                          "fontFamily": "sans-serif",
                          "fontSize": 15,
                        },
                        {
                          "fontSize": 12,
                        },
                      ]
                    }
                  >
                    .
                    23
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </RCTScrollView>
  </View>
</View>
`;
